--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "ce-kmitl-hook-announcement",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.2.1",
-    "dotenv": "^16.0.3",
-    "html-to-text": "^9.0.3",
-    "lodash": "^4.17.21",
-    "sanitize-html": "^2.8.0"
-  }
+	"name": "ce-kmitl-hook-announcement",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "node src/index.js"
+	},
+	"keywords": [],
+	"author": "",
+	"license": "ISC",
+	"dependencies": {
+		"axios": "^1.2.1",
+		"dotenv": "^16.0.3",
+		"html-to-text": "^9.0.3",
+		"lodash": "^4.17.21",
+		"node-cron": "^3.0.2",
+		"sanitize-html": "^2.8.0"
+	}
 }
